--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,8 +326,15 @@ a:focus {
     border-color: #ffffff;
 }
 
-.hero .hero-btn .btn:first-child {
+.hero .hero-btn .btn:first-child,
+.hero .hero-btn .btn:nth-child(2)
+ {
     margin-right: 10px;
+}
+
+.hero .hero-btn .btn:nth-child(3)
+ {
+    padding: 7px 25px;
 }
 
 @media (max-width: 991.98px) {
